--- a/udemyFlask/app/templates/index.html
+++ b/udemyFlask/app/templates/index.html
@@ -3,11 +3,52 @@
 <head>
   <meta charset="utf-8" />
   <title></title>
-  <link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-Hi. index template here.
-<br><br>
-The following was imported: {{ example }} < and this is good.
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-1"></div> 
+        <div class="col-md-10">
+            <h3>Dashboard</h3>
+            <div class="row">
+
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                <div class="panel-body">
+                Basic panel example
+                </div>
+                </div>
+            </div>        
+
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                <div class="panel-body">
+                Basic panel example
+                </div>
+                </div>
+            </div>   
+
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                <div class="panel-body">
+                Basic panel example
+                </div>
+                </div>
+            </div>   
+
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                <div class="panel-body">
+                Basic panel example
+                </div>
+                </div>
+            </div>   
+
+            </div>
+        </div>
+        <div class="col-md-1"></div>
+    </div>  
+</div>
 </body>
 </html>
