--- a/udemyFlask/app/templates/index.html
+++ b/udemyFlask/app/templates/index.html
@@ -4,19 +4,21 @@
   <meta charset="utf-8" />
   <title></title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="./static/style.css">
 </head>
 <body>
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-1"></div> 
         <div class="col-md-10">
-            <h3>Dashboard</h3>
+            <h3>Dashboard</h3><br>
             <div class="row">
 
             <div class="col-md-3">
                 <div class="panel panel-default">
                 <div class="panel-body">
-                Basic panel example
+                <span class="boxValue"><center>{{ data["name"] }}</center></span>
+                <div><center>Name</center></div>
                 </div>
                 </div>
             </div>        
@@ -24,7 +26,8 @@
             <div class="col-md-3">
                 <div class="panel panel-default">
                 <div class="panel-body">
-                Basic panel example
+                <span class="boxValue"><center>{{ data["price_usd"] }}</center></span>
+                <div><center>Price</center></div>
                 </div>
                 </div>
             </div>   
@@ -32,7 +35,8 @@
             <div class="col-md-3">
                 <div class="panel panel-default">
                 <div class="panel-body">
-                Basic panel example
+                <span class="boxValue"><center>{{ data["percent_change_24h"] }}</center></span>
+                <div><center>24 Hours % Change</center></div>
                 </div>
                 </div>
             </div>   
@@ -40,10 +44,29 @@
             <div class="col-md-3">
                 <div class="panel panel-default">
                 <div class="panel-body">
-                Basic panel example
+                <span class="boxValue"><center>{{ data["percent_change_7d"] }}</center></span>
+                <div><center>7 Days % Change</center></div>
                 </div>
                 </div>
             </div>   
+
+            <table class="table table-striped table-bordered">
+                <tr>
+                    <th></th>
+                    <th>Name</th>
+                    <th>Price</th>                    
+                    <th>% Change 1 Hour</th>                      
+                </tr>
+            {% for item in process_coins %}
+                <tr>
+                    <td>{{ loop.index }}</td>
+                    <td>{{ item["name"] }}</td>
+                    <td>{{ item["price_usd"] }}</td>
+                    <td>{{ item["percent_change_1h"] }}</td>
+                    <td>{{ item["isover40"] }}</td>                    
+                </tr>
+            {% endfor %}
+            </table>
 
             </div>
         </div>
