--- a/udemyFlask/app/templates/index.html
+++ b/udemyFlask/app/templates/index.html
@@ -55,7 +55,8 @@
                     <th></th>
                     <th>Name</th>
                     <th>Price</th>                    
-                    <th>% Change 1 Hour</th>                      
+                    <th>% Change 1 Hour</th>
+                    <th>Price is Over 40?</th>            
                 </tr>
             {% for item in process_coins %}
                 <tr>
