--- a/udemyFlask/app/templates/index.html
+++ b/udemyFlask/app/templates/index.html
@@ -12,6 +12,20 @@
         <div class="col-md-1"></div> 
         <div class="col-md-10">
             <h3>Dashboard</h3><br>
+
+            <div class="row">
+            <div class="col-md-4">
+            <form class="form-line" method="post">
+                <div class="form-group">
+                    <label>Enter coin: </label>
+                    <input type="text" class="form-control" id="cointype" name="cointype" placeholder="Coin here">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+            <br>
+            </div>
+            </div>
+
             <div class="row">
 
             <div class="col-md-3">
@@ -26,7 +40,7 @@
             <div class="col-md-3">
                 <div class="panel panel-default">
                 <div class="panel-body">
-                <span class="boxValue"><center>{{ data["price_usd"] }}</center></span>
+                <span class="boxValue"><center>${{ data["price_usd"] }}</center></span>
                 <div><center>Price</center></div>
                 </div>
                 </div>
